testsuite/tests/dependent/should_fail/T16326_Fail8.stderr

T16326_Fail8.hs:7:10: error:
    Illegal class instance: ‘forall a -> C (Blah a)’
      Class instances must be of the form
        context => C ty_1 ... ty_n
      where ‘C’ is a class
